--- a/public/css/style.css
+++ b/public/css/style.css
@@ -127,7 +127,7 @@ nav .nav-wrapper {
 }
 
 #banner-phrase1 {
-    font-family: 'Julius Sans One', sans-serif;
+    font-family: 'Prosto One', cursive;
     font-size: 60px;
     color: black;
     text-align: center;
@@ -141,7 +141,7 @@ nav .nav-wrapper {
 }
 
 #banner-phrase2 {
-    font-family: 'Julius Sans One', sans-serif;
+    font-family: 'Prosto One', cursive;
     font-size: 32px;
     color: black;
     text-align: center;
