--- a/public/css/style.css
+++ b/public/css/style.css
@@ -303,7 +303,6 @@ nav .nav-wrapper {
     font-size: 19px;
     font-family: 'Roboto', sans-serif;
     position: relative;
-    padding-bottom: 20px;
     color: blue;
     text-decoration: none;
 }
@@ -317,7 +316,7 @@ nav .nav-wrapper {
     position: absolute;
     width: 100%;
     height: 2px;
-    bottom: 14px;
+    bottom: 0;
     left: 0;
     background-color: blue;
     visibility: hidden;
@@ -400,16 +399,21 @@ nav .nav-wrapper {
     visibility: visible;
 }
 
-.copyright {
-    display: inline;
-    padding-right: 5px;
-}
-
 .footer {
     font-size: 14px;
     font-family: 'Roboto', sans-serif;
     margin: 0;
 }
+
+.old-portfolio {
+    font-size: 14px;
+}
+
+.copyright {
+    display: inline;
+    padding-right: 5px;
+}
+
 
 /* Media Queries */
 
