--- a/public/css/style.css
+++ b/public/css/style.css
@@ -88,21 +88,19 @@ nav .nav-wrapper {
 }
 
 .social-link-mini:hover {
-    transform: scale(1.2, 1.2);
+    transform: scale(1.1, 1.1);
 }
 
 .social-link-mini:active {
-    transform: scale(0.8, 0.8);
+    transform: scale(0.9, 0.9);
 }
 
-.aboutme-mini {
+.github-mini {
     margin-right: 10px;
-    transform: scale(1.1, 1.1);
 }
 
-.aboutme-mini:hover {
+.github-mini:hover {
     margin-right: 10px;
-    transform: scale(1.1, 1.1);
 }
 
 .banner {
@@ -138,6 +136,7 @@ nav .nav-wrapper {
 .about-box {
     min-height: 600px;
     background-image: linear-gradient(to right, rgb(162, 218, 247), rgb(236, 245, 250), white, white, white, rgb(236, 245, 250), rgb(162, 218, 247));
+    border-bottom: 3px solid rgb(255, 208, 106);
 }
 
 .separation {
@@ -175,16 +174,18 @@ nav .nav-wrapper {
 
 .photo-section-1 {
     height: 400px;
-    background-image: url(../images/portland.jpg);
+    background-image: url(../images/redondo-top.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    border-bottom: 3px solid rgb(255, 208, 106);
 }
 
 .work-box {
     padding-bottom: 20px !important;
     background-image: linear-gradient(to right, rgb(162, 218, 247), rgb(236, 245, 250), white, white, white, rgb(236, 245, 250), rgb(162, 218, 247));
+    border-bottom: 3px solid rgb(255, 208, 106);
 }
 
 .app-title {
@@ -259,11 +260,12 @@ nav .nav-wrapper {
 
 .photo-section-2 {
     height: 400px;
-    background-image: url(../images/solvang.jpg);
+    background-image: url(../images/redondo-middle.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    border-bottom: 3px solid rgb(255, 208, 106);
 }
 
 .skills-box {
@@ -272,6 +274,7 @@ nav .nav-wrapper {
     padding-bottom: 22px !important;
     min-height: 600px;
     background-image: linear-gradient(to right, rgb(162, 218, 247), rgb(236, 245, 250), white, white, white, rgb(236, 245, 250), rgb(162, 218, 247));
+    border-bottom: 3px solid rgb(255, 208, 106);
 }
 
 .skills-inner-box {
@@ -338,7 +341,7 @@ nav .nav-wrapper {
 
 .photo-section-3 {
     height: 400px;
-    background-image: url(../images/redondo.jpg);
+    background-image: url(../images/redondo-bottom.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
